# OS_GO

./: .gitignore  .gitmodules  DOCUMENTATION.md  README.md  README_old.md  core.cpp  core_adapter.py  docker-compose.yml  game.sgf  ghc  gnugo_adapter.py  mango.core.cpp  requirements.txt
DOCs/: stucture.md
SGFs/: go_game_20260318_190040.sgf  go_vs_gnugo_20260319_000157.sgf
auth/: env.example  requirements.txt  run.bat  run.py  test_env.py
auth/alembic/: env.py
auth/alembic/versions/: 001_email_verification.py
auth/app/: auth.py  config.py  database.py  main.py
auth/app/dependencies/: auth.py
auth/app/desktop/: main.py
auth/app/models/: user.py
auth/app/routers/: auth.py
auth/app/services/: email_service.py  password_service.py  totp_service.py
auth/app/static/: index.html  register.html
bot/: GNU_go_bot_v0.py  GNU_go_bot_v1.py  Parser_sgf.py
bot/KataGo-1.16.4-OpenCL/KataGoData/opencltuning/: tune11_gpuNVIDIAGeForceRTX3050LaptopGPU_x19_y19_c128_mv8.txt  tune11_gpuNVIDIAGeForceRTX3050LaptopGPU_x19_y19_c512_mv15.txt  tune11_gpuNVIDIAGeForceRTX3060_x19_y19_c512_mv15.txt  tune11_gpugfx902_x19_y19_c512_mv15.txt
core/: Bindings.cpp  Board.h  Board_new.h  CMakeLists.txt  Game.core.cpp  GnuGo_Integration.py  KataGoAnalyzer.cpp  KataGoAnalyzer.h  _test.py  another_core.cpp  config.py  core.cpp  core.h  gamePvE_Local.py  gamePvP_Local.py  mango.core.cpp  mango.core.h  pyproject.toml  setup.py  sgf_loader.py  test1.py  test_bind.py  test_lib.py  test_lib_con.py  test_load_game.py
games/analysis_results/: go_pve_20260321_012938_20260430_012749.txt  go_pvp_20260405_164332_20260430_162914.txt
games/loaded/: go_pve_20260321_012938.sgf  go_pvp_20260321_012209.sgf  go_pvp_20260407_202014.sgf  go_pvp_20260429_232622.sgf
games/pve/: go_pve_20260430_015049.sgf  go_pve_20260502_173003.sgf
games/pvp/: go_pvp_20260405_164332.sgf  go_pvp_20260407_193749.sgf  go_pvp_20260407_193920.sgf  go_pvp_20260407_201609.sgf  go_pvp_20260501_133829.sgf
interface/Go_app/: game_timer.py  main.py  navigation.py  pyproject.toml  widget.py
interface/Go_app/core/: fake_core_for_test.py  go_board_widget.py
interface/Go_app/ui/: dialog.cpp  form.ui  game_settings_dialog.ui  game_settings_dialog_pve.ui  game_window.ui  game_windowPvE.ui  game_windowPvP.ui  login.ui  profile_window.cpp  profile_window.h  profile_window.ui
interface/Go_app/windows/: app_settings.py  base_window.py  game_setting_dialog.py  game_settings_dialog_pve.py  game_window.py  game_windowPvE.py  game_windowPvP.py  profile_window.py  settings.json  settings_dialog.py
scripts/: Bindings.cpp  CMakeLists.txt  Game.py  GnuGo_Analyzer.py  GnuGo_Integration.py  KataGoAdapter.py  KataGoAnalyzer.py  PLAY_console.py  config.py  console_PVE.py  console_PVP.py  console_analyzer.py  console_back.py  core_adapter.py  gamePvE_Local.py  gamePvP_Local.py  game_controller.py  gnugo_adapter.py  go_engine.pyd  sgf_analyzer.py  sgf_loader.py  test_load_game.py  unified_game_loop.py
scripts/network_pvp/: .env.example  API_DOCUMENTATION.md  Dockerfile  README.md  __init__.py  client.py  config.py  console_network.py  console_pvp_network.py  demo.py  docker-compose.yml  gui_integration_example.py  output_interface.py  protocol.py  readme.md  server.py  test_protocol.py
scripts_old/: config.py  gamePvE_Local.py  gamePvP_Local.py  sgf_loader.py  test_load_game.py
